# serpapi-cli

./: .gitignore  .goreleaser.yml  Cargo.toml  Cross.toml  LICENSE  README.md  dist-workspace.toml  go.mod  go.sum  rustfmt.toml
.github/workflows/: ci.yml  release.yml
cmd/serpapi/: main.go
pkg/api/: client.go
pkg/cmd/: account.go  archive.go  locations.go  login.go  root.go  search.go  search_test.go
pkg/config/: config.go  config_test.go  config_unix.go  config_windows.go
pkg/errors/: errors.go  errors_test.go
pkg/jq/: jq.go  jq_test.go
pkg/output/: output.go  output_test.go
pkg/params/: params.go  params_test.go
pkg/spinner/: spinner.go
src/: config.rs  error.rs  jq.rs  lib.rs  main.rs  output.rs  params.rs
src/commands/: account.rs  archive.rs  locations.rs  login.rs  mod.rs  search.rs
tests/: e2e.rs  e2e_test.go  integration_tests.rs  test_url_cycle.rs
