[package]
name = "serpapi-cli"
version = "0.1.1"
edition = "2021"
rust-version = "1.70"
authors = ["SerpApi <support@serpapi.com>"]
license = "MIT"
description = "Official CLI client for SerpApi — fast search scraping for humans and AI agents"
repository = "https://github.com/serpapi/serpapi-cli"
homepage = "https://serpapi.com"
documentation = "https://github.com/serpapi/serpapi-cli#readme"
readme = "README.md"
keywords = ["serpapi", "search", "scraping", "cli", "google"]
categories = ["command-line-utilities", "web-programming::http-client"]
include = [
    "src/**/*",
    "tests/**/*",
    "README.md",
    "LICENSE",
    "Cargo.toml",
]

[lib]
path = "src/lib.rs"

[[bin]]
name = "serpapi"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
openssl = { version = "0.10", features = ["vendored"] }
colored_json = "4.1"
dirs = "5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serpapi = "1.1.0"
thiserror = "2"
rpassword = "7"
tokio = { version = "1", features = ["rt", "time", "macros"] }
toml = "0.8"
url = "2"
jaq-core = "1.5"
jaq-interpret = "1.5"
jaq-parse = "1.0"
jaq-std = "1.6"

[package.metadata.docs.rs]
targets = []


[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
